--- a/Final/German/AboutMe/aboutMe.html
+++ b/Final/German/AboutMe/aboutMe.html
@@ -70,7 +70,7 @@
                 </div>                
                 <div class="col-4 themed-grid-col aboutMea">
                     <img src="/Pictures/bootstrap-icons-1.8.3/spotify.svg" >
-                    <h4>Lieblings spotify Artists: </h4>
+                    <h4>Lieblings Spotify Artists: </h4>
      
                         <img src="/Final/Pictures/dprian.jpg" class="artist">
                         <img src="/Final/Pictures/tjBeast.jpg"class="artist">
