--- a/Final/English/AboutMe/aboutMe.html
+++ b/Final/English/AboutMe/aboutMe.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="/Final/main.css">
-        <title>Web Portfolio von Daria</title>
+        <title>Web Portfolio from Daria</title>
     </head>
     <body>
         <header>
@@ -16,34 +16,34 @@
               <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/startPage.html">Home</a>
+                    <a class="nav-link" href="/Final/English/startPage.html">Home</a>
                   </li>
                   <div class="dropdown">
                     <li class="nav-item"><a class="nav-link">Blog</a>
                     <div class="dropdown-content">
-                    <a href="/Final/German/Blog/firstBlog.html">Java Blog</a>
-                    <a href="/Final/German/Blog/secondBlog.html">C# Blog</a>
+                    <a href="/Final/English/Blog/firstBlog.html">Java Blog</a>
+                    <a href="/Final/English/Blog/secondBlog.html">C# Blog</a>
                   </div>
                   </li>
                   </div>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/German/Contact/contact.html">Kontakt</a>
+                    <a class="nav-link" href="/Final/English/Contact/contact.html">Contact</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Über mich<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">About me<span class="sr-only">(current)</span></a>
                   </li>
                 </ul>
               </div>
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">DE <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/Final/German/AboutMe/aboutMe.html">DE </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">|</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/English/AboutMe/aboutMe.html">EN</a>
+                    <a class="nav-link active" href="#">EN<span class="sr-only">(current)</span></a>
                   </li> 
                   <li class="nav-item">
                     <a class="nav-link" id="imgK" href="#"><img src="/heart.gif"></a>
@@ -55,22 +55,22 @@
           <div class="banner">
             <div class="title">
             <div class="titleText">
-              <h1>Wer bin ich?</h1>
+              <h1>Who am I?</h1>
             </div>
           </div>
           </div>
           <div class="bottom">
             <div class="row mb-3">
                 <div class="col-4 themed-grid-col aboutMe">
-                    <h4>Über mich: </h4>
-                    Mein Name ist Daria, ich bin 16 Jahre alt und lebe seit gefühlt immer noch im gleichen Dorf. 
-                    In meiner Freizeit mache ich gerne Sport oder etwas mit meinen Freunden. Vor einem Jahr habe ich meine Ausbildung als Applikationsentwicklerin begonnen.
-                    Was ich nach diesem Bald einem Jahr(geschrieben 17.03.2022) sagen kann ist, dass ich es nicht bereue diesen Beruf ausgewählt zu haben.
-                  
+                    <h4>About me: </h4>
+                    My name is Daria, I am 16 years old and I have been living in the same village for what feels like forever. 
+                    In my free time I like to do sports or something with my friends. A year ago I started my apprenticeship as an application developer.
+                    What I can say after this soon to be one year (written 17.03.2022) is that I don't regret having chosen this profession.
+
                 </div>                
                 <div class="col-4 themed-grid-col aboutMea">
                     <img src="/Pictures/bootstrap-icons-1.8.3/spotify.svg" >
-                    <h4>Lieblings Spotify Artists: </h4>
+                    <h4>Favourite Spotify artists: </h4>
      
                         <img src="/Final/Pictures/dprian.jpg" class="artist">
                         <img src="/Final/Pictures/tjBeast.jpg"class="artist">
@@ -78,7 +78,7 @@
 
                 </div>
                 <div class="col-4 themed-grid-col aboutMeText">
-                    <h4>Mein Erfahrungen mit Programmiersprachen:</h4>
+                    <h4>My experience with programming languages:</h4>
                     Java: 
                     <img src="/Pictures/bootstrap-icons-1.8.3/star-fill.svg" >
                     <img src="/Pictures/bootstrap-icons-1.8.3/star-fill.svg" >
