--- a/Final/English/Contact/contact.html
+++ b/Final/English/Contact/contact.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="/Final/main.css">
-        <title>Web Portfolio von Daria</title>
+        <title>Web Portfolio from Daria</title>
     </head>
     <body>
         <header>
@@ -16,36 +16,36 @@
               <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/startPage.html">Home</a>
+                    <a class="nav-link" href="/Final/English/startPage.html">Home</a>
                   </li>
                   <div class="dropdown">
                     <li class="nav-item"><a class="nav-link">Blog</a>
                     <div class="dropdown-content">
-                    <a href="/Final/German/Blog/firstBlog.html">Java Blog</a>
-                    <a href="/Final/German/Blog/secondBlog.html">C# Blog/a>
+                    <a href="/Final/English/Blog/firstBlog.html">Java Blog</a>
+                    <a href="/Final/English/Blog/secondBlog.html">C# Blog</a>
                   </div>
                   </li>
                   </div>
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Kontakt<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/German/AboutMe/aboutMe.html">Über mich</a>
+                    <a class="nav-link" href="/Final/English/AboutMe/aboutMe.html">About me</a>
                   </li>
                 </ul>
               </div>
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">DE <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/Final/German/Contact/contact.html">DE </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">|</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/English/Contact/contact.html">EN</a>
+                    <a class="nav-link" href="#">EN<span class="sr-only">(current)</span></a>
                   </li> 
-                  <li class="nav-item">
+                  <li class="nav-item active">
                     <a class="nav-link" id="imgK" href="#"><img src="/heart.gif"></a>
                   </li>
                 </ul>
@@ -55,7 +55,7 @@
           <div class="banner">
             <div class="title">
               <div class="titleText">
-                <h1>Kontakt</h1>
+                <h1>Contact</h1>
               </div>
             </div>
           </div>
@@ -64,7 +64,7 @@
               <h1>Daria Heusser</h1>
               <br>
               <p><img src="/Pictures/bootstrap-icons-1.8.3/send.svg"> Email: theReal@email.com</p>
-              <p><img src="/Pictures/bootstrap-icons-1.8.3/telephone.svg">Telefon: +41PhoneNumber</p>
+              <p><img src="/Pictures/bootstrap-icons-1.8.3/telephone.svg">Phone: +41PhoneNumber</p>
               <p><img src="/Pictures/bootstrap-icons-1.8.3/snapchat.svg">Snapchat: @realsnap</p>
               <p><img src="/Pictures/bootstrap-icons-1.8.3/twitter.svg">Twitter: @realtwitter</p>
             </div>
