--- a/Final/startPage.html
+++ b/Final/startPage.html
@@ -44,7 +44,7 @@
                     <a class="nav-link disabled" href="#">|</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/English/startPage.html">EN</a>
+                    <a class="nav-link" href="/Final/English/startPage.html">EN</a>
                   </li> 
                   <li class="nav-item">
                     <a class="nav-link" id="imgK" href="#"><img src="/heart.gif"></a>
