--- a/Final/English/startPage.html
+++ b/Final/English/startPage.html
@@ -38,7 +38,7 @@
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/startPage.html">DE </a>
+                    <a class="nav-link" href="/startPage.html">DE </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">|</a>
