--- a/startPage.html
+++ b/startPage.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="/Final/main.css">
         <title>Web Portfolio von Daria</title>
     </head>
     <body class="mainBackground">
@@ -55,7 +55,7 @@
         <main>
               <div class="title">
                 <div class="titleText">
-                    <img src="Pictures/flower2.png" class="flower">
+                    <img src="/Final/Pictures/flower2.png" class="flower">
                   <h1>Willkommen auf dem Web Portfolio von Daria!</h1>
                 </div>
               </div>
