--- a/English/Contact/contact.html
+++ b/English/Contact/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="/Final/main.css">
+        <link rel="stylesheet" href="/main.css">
         <title>Web Portfolio from Daria</title>
     </head>
     <body>
@@ -16,13 +16,13 @@
               <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/English/startPage.html">Home</a>
+                    <a class="nav-link" href="/English/startPage.html">Home</a>
                   </li>
                   <div class="dropdown">
                     <li class="nav-item"><a class="nav-link">Blog</a>
                     <div class="dropdown-content">
-                    <a href="/Final/English/Blog/firstBlog.html">Java Blog</a>
-                    <a href="/Final/English/Blog/secondBlog.html">C# Blog</a>
+                    <a href="/English/Blog/firstBlog.html">Java Blog</a>
+                    <a href="/English/Blog/secondBlog.html">C# Blog</a>
                   </div>
                   </li>
                   </div>
@@ -30,14 +30,14 @@
                     <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/English/AboutMe/aboutMe.html">About me</a>
+                    <a class="nav-link" href="/English/AboutMe/aboutMe.html">About me</a>
                   </li>
                 </ul>
               </div>
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/German/Contact/contact.html">DE </a>
+                    <a class="nav-link" href="/German/Contact/contact.html">DE </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">|</a>
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="#">EN<span class="sr-only">(current)</span></a>
                   </li> 
                   <li class="nav-item active">
-                    <a class="nav-link" id="imgK" href="#"><img src="/heart.gif"></a>
+                    <a class="nav-link" id="imgK" href="#"><img src="/Pictures/heart.gif"></a>
                   </li>
                 </ul>
               </div>
