--- a/German/AboutMe/aboutMe.html
+++ b/German/AboutMe/aboutMe.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="/Final/main.css">
+        <link rel="stylesheet" href="/main.css">
         <title>Web Portfolio von Daria</title>
     </head>
     <body>
@@ -21,13 +21,13 @@
                   <div class="dropdown">
                     <li class="nav-item"><a class="nav-link">Blog</a>
                     <div class="dropdown-content">
-                    <a href="/Final/German/Blog/firstBlog.html">Java Blog</a>
-                    <a href="/Final/German/Blog/secondBlog.html">C# Blog</a>
+                    <a href="/German/Blog/firstBlog.html">Java Blog</a>
+                    <a href="/German/Blog/secondBlog.html">C# Blog</a>
                   </div>
                   </li>
                   </div>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/German/Contact/contact.html">Kontakt</a>
+                    <a class="nav-link" href="/German/Contact/contact.html">Kontakt</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="#">Über mich<span class="sr-only">(current)</span></a>
@@ -43,10 +43,10 @@
                     <a class="nav-link disabled" href="#">|</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/English/AboutMe/aboutMe.html">EN</a>
+                    <a class="nav-link" href="/English/AboutMe/aboutMe.html">EN</a>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" id="imgK" href="#"><img src="/heart.gif"></a>
+                    <a class="nav-link" id="imgK" href="#"><img src="/Pictures/heart.gif"></a>
                   </li>
               </div>
             </nav>
@@ -72,9 +72,9 @@
                     <img src="/Pictures/bootstrap-icons-1.8.3/spotify.svg" >
                     <h4>Lieblings Spotify Artists: </h4>
      
-                        <img src="/Final/Pictures/dprian.jpg" class="artist">
-                        <img src="/Final/Pictures/tjBeast.jpg"class="artist">
-                        <img src="/Final/Pictures/badbunny.jpg"class="artist">
+                        <img src="/Pictures/dprian.jpg" class="artist">
+                        <img src="/Pictures/tjBeast.jpg"class="artist">
+                        <img src="/Pictures/badbunny.jpg"class="artist">
 
                 </div>
                 <div class="col-4 themed-grid-col aboutMeText">
