--- a/German/Contact/contact.html
+++ b/German/Contact/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="/Final/main.css">
+        <link rel="stylesheet" href="/main.css">
         <title>Web Portfolio von Daria</title>
     </head>
     <body>
@@ -21,8 +21,8 @@
                   <div class="dropdown">
                     <li class="nav-item"><a class="nav-link">Blog</a>
                     <div class="dropdown-content">
-                    <a href="/Final/German/Blog/firstBlog.html">Java Blog</a>
-                    <a href="/Final/German/Blog/secondBlog.html">C# Blog/a>
+                    <a href="/German/Blog/firstBlog.html">Java Blog</a>
+                    <a href="/German/Blog/secondBlog.html">C# Blog/a>
                   </div>
                   </li>
                   </div>
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">Kontakt<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/German/AboutMe/aboutMe.html">Über mich</a>
+                    <a class="nav-link" href="/German/AboutMe/aboutMe.html">Über mich</a>
                   </li>
                 </ul>
               </div>
@@ -43,10 +43,10 @@
                     <a class="nav-link disabled" href="#">|</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/English/Contact/contact.html">EN</a>
+                    <a class="nav-link" href="/English/Contact/contact.html">EN</a>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" id="imgK" href="#"><img src="/heart.gif"></a>
+                    <a class="nav-link" id="imgK" href="#"><img src="/Pictures/heart.gif"></a>
                   </li>
                 </ul>
               </div>
