--- a/startPage.html
+++ b/startPage.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="/Final/main.css">
+        <link rel="stylesheet" href="main.css">
         <title>Web Portfolio von Daria</title>
     </head>
     <body class="mainBackground">
@@ -21,17 +21,17 @@
                   <div class="dropdown">
                     <li class="nav-item"><a class="nav-link">Blog</a>
                     <div class="dropdown-content">
-                    <a href="/Final/German/Blog/firstBlog.html">Java Blog</a>
-                    <a href="/Final/German/Blog/secondBlog.html">C# Blog</a>
+                    <a href="/German/Blog/firstBlog.html">Java Blog</a>
+                    <a href="/German/Blog/secondBlog.html">C# Blog</a>
                     </div>
                   </li>
                   </div>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/German/Contact/contact.html">Kontakt</a>
+                    <a class="nav-link" href="/German/Contact/contact.html">Kontakt</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/German/AboutMe/aboutMe.html">Über mich</a>
+                    <a class="nav-link" href="/German/AboutMe/aboutMe.html">Über mich</a>
                   </li>
                 </ul>
               </div>
@@ -44,10 +44,10 @@
                     <a class="nav-link disabled" href="#">|</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Final/English/startPage.html">EN</a>
+                    <a class="nav-link" href="/English/startPage.html">EN</a>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" id="imgK" href="#"><img src="/heart.gif"></a>
+                    <a class="nav-link" id="imgK" href="#"><img src="/Pictures/heart.gif"></a>
                   </li>
               </div>
             </nav>
@@ -55,7 +55,7 @@
         <main>
               <div class="title">
                 <div class="titleText">
-                    <img src="/Final/Pictures/flower2.png" class="flower">
+                    <img src="/Pictures/flower2.png" class="flower">
                   <h1>Willkommen auf dem Web Portfolio von Daria!</h1>
                 </div>
               </div>
