--- a/English/Contact/contact.html
+++ b/English/Contact/contact.html
@@ -52,21 +52,40 @@
               </div>
             </nav>
           </header>
-          <div class="banner">
-            <div class="title">
-              <div class="titleText">
-                <h1>Contact</h1>
-              </div>
+          <div class="split left">
+            <div class="centered">
+                <h1>Contact:</h1>
+                Do you want to get in touch with me?
+                <br>
+                On this page you are welcome to do so!
             </div>
           </div>
-          <div class="descriptionContact">
-            <div class="descriptionContactText">
-              <h1>Daria Heusser</h1>
+          
+          <div class="split right">
+            <div class="centered">
+              <h4>Contact Form:</h4>
+              If you have a concern or just want to contact me, please give a reason for writing:
               <br>
-              <p><img src="/Pictures/bootstrap-icons-1.8.3/send.svg"> Email: theReal@email.com</p>
-              <p><img src="/Pictures/bootstrap-icons-1.8.3/telephone.svg">Phone: +41PhoneNumber</p>
-              <p><img src="/Pictures/bootstrap-icons-1.8.3/snapchat.svg">Snapchat: @realsnap</p>
-              <p><img src="/Pictures/bootstrap-icons-1.8.3/twitter.svg">Twitter: @realtwitter</p>
+              <br>
+              <form>
+                <div class="row g-3">
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="First Name" aria-label="First name">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="Last Name" aria-label="Last name">
+                  </div>
+                </div>
+                <br>
+                <div class="mb-3">
+                  <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                  <textarea class="form-control" placeholder="Your concern..." id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <br>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
             </div>
           </div>
           <footer>
