--- a/German/Contact/contact.html
+++ b/German/Contact/contact.html
@@ -52,23 +52,44 @@
               </div>
             </nav>
           </header>
-          <div class="banner">
-            <div class="title">
-              <div class="titleText">
+          <main>
+          <div class="split left">
+            <div class="centered">
                 <h1>Kontakt</h1>
-              </div>
+                Wollen sie mit mir in Kontakt tretten?
+                <br>
+                Auf dieser Seite können Sie dies gerne tun!
             </div>
           </div>
-          <div class="descriptionContact">
-            <div class="descriptionContactText">
-              <h1>Daria Heusser</h1>
+          
+          <div class="split right">
+            <div class="centered">
+              <h4>Kontakt Formular:</h4>
+              Falls sie ein anliegen haben oder sich einfach bei mir melden wollen, geben sie bitte einen Grund für ihr schreiben an:
               <br>
-              <p><img src="/Pictures/bootstrap-icons-1.8.3/send.svg"> Email: theReal@email.com</p>
-              <p><img src="/Pictures/bootstrap-icons-1.8.3/telephone.svg">Telefon: +41PhoneNumber</p>
-              <p><img src="/Pictures/bootstrap-icons-1.8.3/snapchat.svg">Snapchat: @realsnap</p>
-              <p><img src="/Pictures/bootstrap-icons-1.8.3/twitter.svg">Twitter: @realtwitter</p>
+              <br>
+              <form>
+                <div class="row g-3">
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="Vorname" aria-label="First name">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="Nachname" aria-label="Last name">
+                  </div>
+                </div>
+                <br>
+                <div class="mb-3">
+                  <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                  <textarea class="form-control" placeholder="Ihr anliegen..." id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <br>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
             </div>
           </div>
+        </main>
           <footer>
           </footer>
     </body>
